<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">UangKu</string>
    <string name="label_open_source" tools:ignore="MissingTranslation">Open Source</string>
    <string name="label_money_management_app" tools:ignore="MissingTranslation">Money Management App</string>
    <string name="label_developed_by">Developed By</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_history">History</string>
    <string name="label_pengaturan">Settings</string>
    <string name="label_belum_login">Belum Login</string>
    <string name="label_not_login_deskription">Login for online backup!</string>
    <string name="foo">Lorem Ipsum</string>
    <string name="label_kategori">Category</string>
    <string name="label_remove_data">Delete Data</string>
    <string name="label_about_app">About</string>
    <string name="label_pencarian">Search</string>
    <string name="label_summary">Summary</string>
    <string name="label_tambah_kategori">Tambah Kategori</string>
    <string name="label_save">Simpan</string>
    <string name="label_category_name">Nama Kategori</string>
    <string name="label_jenis">Jenis</string>
    <string name="label_pilih_jenis">Pilih Jenis</string>
    <string name="label_income">Pemasukan</string>
    <string name="label_expanse">Pengeluaran</string>
    <string name="placeholder_error_empty">%1$s Tidak boleh kosong!</string>
    <string name="label_confirm_delete">Konfirmasi Hapus</string>
    <string name="placeholder_delete_message">Apakah anda yakin ingin menghapus %1$s ini?</string>
    <string name="label_delete">Hapus</string>
    <string name="label_cancel">Batal</string>
    <string name="label_activity_filter">Filter Aktivitas</string>
    <string name="label_all">Semua</string>
    <string name="label_transaction">Transaksi</string>
    <string name="label_date">Tanggal</string>
    <string name="label_ammount">Nominal</string>
    <string name="label_category">Kategori</string>
    <string name="label_description">Keterangan</string>
</resources>