<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.transaction.form.FormTransactionFragment">

    <com.oratakashi.uangku.component.widget.CenterBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCalendar"
                style="@style/BaseTextInputLayout.Calendar.First"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/BaseTextInputEditText.OneLine.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etAmmount"
                style="@style/BaseTextInputLayout.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_ammount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etCalendar"
                app:prefixText="Rp">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/BaseTextInputEditText.OneLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etCategory"
                style="@style/BaseDropdownLayout.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etNote">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spnCategory"
                    style="@style/BaseTextInputEditText.OneLine.Disabled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etNote"
                style="@style/BaseTextInputLayout.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etAmmount">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/BaseTextInputEditText.OneLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/Montserrat.Black3.14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="98dp"
                android:text="@string/label_jenis"
                app:layout_constraintTop_toTopOf="@+id/etCategory" />

            <RadioGroup
                android:id="@+id/rgType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/rbIncome"
                android:layout_marginHorizontal="28dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:layout_editor_absoluteX="0dp">
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/RadioButton"
                    android:layout_weight="1"
                    android:text="@string/label_income"/>
                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbExpanse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/RadioButton"
                    android:layout_weight="1"
                    android:text="@string/label_expanse"/>
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.oratakashi.uangku.component.widget.PrimaryButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_save"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>